// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Page Main should match snapshot for AMP 1`] = `
<DocumentFragment>
  <amp-analytics>
    <script
      type="application/json"
    >
      {"transport":{"beacon":false,"xhrpost":false,"image":true},"requests":{"pageview":"\${base}s=598343&s2=4&p=amharic.bbc_amharic_radio.liveradio.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn:bbc:ares::ws_live:bbc_amharic_radio]&x2=[amp]&x3=[news-amharic]&x4=[am]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[player-live]&x8=[simorgh]&x9=[ያድምጡ+-+BBC+News+አማርኛ]"},"triggers":{"trackPageview":{"on":"visible","request":"pageview"}}}
    </script>
  </amp-analytics>
  <main
    class="GridComponent-nf79gm-0 iUNUcT GelPageGrid-ylca1m-0 kIDOXv"
    dir="ltr"
    role="main"
  >
    <div
      class="GridComponent-nf79gm-0 eplZSI"
      dir="ltr"
    >
      <h1
        class="Headline-sc-1kh1qhu-0 cWPJOi"
        id="content"
        tabindex="-1"
      >
        ያድምጡ
      </h1>
      <p
        class="Paragraph-k859h4-0 cnKvCl"
      >
        ዝግጅቶቻችንን’
      </p>
      <div
        class="MediaPlayerOuterWrapper-sc-1hns5mj-0 hdCRkd"
      >
        <div
          class="MediaPlayerInnerWrapper-sc-1hns5mj-1 cfTqqs"
        >
          <div
            class="StyledAudioContainer-sc-13p1a4d-1 bNktbX"
          >
            <amp-iframe
              allowfullscreen="allowfullscreen"
              frameborder="0"
              layout="fill"
              sandbox="allow-scripts allow-same-origin"
              scrolling="no"
              src="https://polling.test.bbc.co.uk/ws/av-embeds/media/bbc_amharic_radio/liveradio/am/amp"
              title="Audio player"
            >
              <amp-img
                alt=""
                attribution=""
                height="16"
                layout="fill"
                placeholder="true"
                src="http://localhost:7080/images/amp_audio_placeholder.png"
                width="9"
              />
            </amp-iframe>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`Radio Page Main should match snapshot for Canonical 1`] = `
<DocumentFragment>
  <noscript />
  <main
    class="GridComponent-nf79gm-0 iUNUcT GelPageGrid-ylca1m-0 kIDOXv"
    dir="ltr"
    role="main"
  >
    <div
      class="GridComponent-nf79gm-0 eplZSI"
      dir="ltr"
    >
      <h1
        class="Headline-sc-1kh1qhu-0 cWPJOi"
        id="content"
        tabindex="-1"
      >
        ያድምጡ
      </h1>
      <p
        class="Paragraph-k859h4-0 cnKvCl"
      >
        ዝግጅቶቻችንን’
      </p>
      <div
        class="MediaPlayerOuterWrapper-sc-1hns5mj-0 hdCRkd"
      >
        <div
          class="MediaPlayerInnerWrapper-sc-1hns5mj-1 cfTqqs"
        >
          <div
            class="StyledAudioContainer-sc-13p1a4d-1 bNktbX"
          >
            <iframe
              allow="autoplay; fullscreen"
              allowfullscreen=""
              class="StyledIframe-fuo2ed-0 jQWQE"
              scrolling="no"
              src="https://polling.test.bbc.co.uk/ws/av-embeds/media/bbc_amharic_radio/liveradio/am"
              title="Audio player"
            />
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
